<resources>
    <string name="app_name">Twitter</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="message">Message</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="activity">Activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="checkout">Check out what\'s happening on Twitter</string>
    <string name="x">X</string>
    <string name="view_related">View related Tweets</string>
    <string name="trending_text">Mourinho on Mata and #MUFC</string>
    <string name="trending_text_tweet">23.4K Tweets</string>
    <string name="girl">Brier Avil</string>
    <string name="girl_handle">\@BrierAvil</string>
    <string name="m1">1m</string>
    <string name="girl_tweet">All these tweets about gmail and macs are suffocating me...someone tweet about their sandwich or something, plz.</string>
    <string name="guy">Dylan Byrd</string>
    <string name="guy_handle">\@byrdinflight</string>
    <string name="h1">1h</string>
    <string name="guy_tweet">Does @ThisGuy know it\'s National Hug</string>
    <string name="edit">What\'s happening?</string>
</resources>
