<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              tools:context=".MainActivity">

    <!--<android.support.v7.widget.CardView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:src="@drawable/ic_twitter" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout" />


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15sp"
                    android:text="@string/x"
                    android:textAlignment="textEnd"
                    android:textColor="@color/x_color" />

        </LinearLayout>

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="15sp"
                     android:layout_marginRight="15sp"
                     android:layout_marginTop="10sp">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/trending" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:text="@string/trending_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:paddingTop="40sp"
                    android:text="@string/trending_text_tweet"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
        </FrameLayout>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/view_related"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:textColor="@color/view_related_color"
                android:background="@drawable/view_related_button" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="10sp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                                android:layout_width="8sp"
                                                android:layout_height="8sp"
                                                android:layout_marginRight="10sp"
                                                android:paddingRight="10sp"
                                                card_view:cardBackgroundColor="@color/tab_letter_selected"
                                                card_view:cardCornerRadius="4dp" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                                android:layout_width="8sp"
                                                android:layout_height="8sp"
                                                android:layout_marginRight="10sp"
                                                card_view:cardBackgroundColor="@color/bullet"
                                                card_view:cardCornerRadius="4dp" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                                android:layout_width="8sp"
                                                android:layout_height="8sp"
                                                android:layout_marginRight="10sp"
                                                card_view:cardBackgroundColor="@color/bullet"
                                                card_view:cardCornerRadius="4dp" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                                android:layout_width="8sp"
                                                android:layout_height="8sp"
                                                card_view:cardBackgroundColor="@color/bullet"
                                                card_view:cardCornerRadius="4dp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10sp"
                android:background="@color/gap"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">

            <ImageView
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="15sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/girl" />

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/girl"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_marginLeft="10sp"
                            android:layout_marginRight="5sp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/girl_handle"
                            android:textStyle="bold"
                            android:textColor="@color/handle"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="15sp"
                            android:text="@string/m1"
                            android:textAlignment="textEnd"
                            android:textColor="@color/handle" />
                </LinearLayout>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="15sp"
                        android:textSize="18sp"
                        android:text="@string/girl_tweet"/>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="10sp">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_reply"
                            android:layout_marginRight="30sp"/>

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_retweet"
                            android:layout_marginRight="30sp"/>

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_star"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="5sp"
                android:layout_marginTop="10sp"
                android:background="@color/gap"/>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp">

                <ImageView
                        android:layout_width="70sp"
                        android:layout_height="70sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginLeft="15sp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/guy" />

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/guy"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:textSize="18sp"
                                android:layout_marginLeft="10sp"
                                android:layout_marginRight="5sp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/guy_handle"
                                android:textStyle="bold"
                                android:textColor="@color/handle"/>

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingRight="15sp"
                                android:text="@string/h1"
                                android:textAlignment="textEnd"
                                android:textColor="@color/handle" />
                    </LinearLayout>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10sp"
                            android:layout_marginRight="20sp"
                            android:textSize="18sp"
                            android:text="@string/guy_tweet"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/last"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="50sp"
                    android:background="@color/white"
                    android:layout_gravity="bottom">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit"
                        android:layout_weight="6"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_photo_frame"
                        android:layout_weight="1"/>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_photo_camera"
                        android:layout_weight="1"/>

            </LinearLayout>

        </FrameLayout>



    </LinearLayout>



</android.support.v7.widget.LinearLayoutCompat>